.sisyphus/evidence/task-40-demo.log
warning: patch `ark-bn254 v0.6.0 (https://github.com/arkworks-rs/algebra#3b2a1249)` was not used in the crate graph
warning: patch `ark-crypto-primitives v0.5.0 (https://github.com/flyingnobita/crypto-primitives?rev=f559264#f5592640)` was not used in the crate graph
warning: patch `ark-ec v0.6.0 (https://github.com/arkworks-rs/algebra#3b2a1249)` was not used in the crate graph
warning: patch `ark-ff v0.6.0 (https://github.com/arkworks-rs/algebra#3b2a1249)` was not used in the crate graph
warning: patch `ark-groth16 v0.5.0 (https://github.com/arkworks-rs/groth16?rev=b3b4a15#b3b4a152)` was not used in the crate graph
warning: patch `ark-grumpkin v0.6.0 (https://github.com/arkworks-rs/algebra#3b2a1249)` was not used in the crate graph
warning: patch `ark-poly v0.6.0 (https://github.com/arkworks-rs/algebra#3b2a1249)` was not used in the crate graph
warning: patch `ark-poly-commit v0.5.0 (https://github.com/arkworks-rs/poly-commit#a05ec99d)` was not used in the crate graph
warning: patch `ark-serialize v0.6.0 (https://github.com/arkworks-rs/algebra#3b2a1249)` was not used in the crate graph
warning: patch `ark-snark v0.5.1 (https://github.com/arkworks-rs/snark#845ce9d5)` was not used in the crate graph
help: Check that the patched package version and available features are compatible
      with the dependency requirements. If the patch has a different version from
      what is locked in the Cargo.lock file, run `cargo update` to use the new
      version. This may also occur with an optional dependency that is not enabled.
warning: pvthfhe-fhe@0.1.0: MOCK BACKEND ACTIVE — XOR/SHA256 ONLY. Set PVTHFHE_I_UNDERSTAND_THIS_IS_A_MOCK=1 to use.
warning: pvthfhe-aggregator@0.1.0: aggregator: folding uses CycloFoldStepCircuit with real Ajtai commitments (CycloNizkAdapter)
   Compiling pvthfhe-compressor v0.1.0 (/home/dev/pvthfhe/crates/pvthfhe-compressor)
error[E0425]: cannot find type `NovaScalar` in this scope
  --> crates/pvthfhe-compressor/src/nova/monomial_range.rs:20:53
   |
20 | pub fn monomial_range_check_bp<CS: ConstraintSystem<NovaScalar>>(
   |                                                     ^^^^^^^^^^ not found in this scope
   |
help: consider importing this type alias
   |
 1 + use crate::nova::NovaScalar;
   |

error[E0425]: cannot find type `NovaScalar` in this scope
  --> crates/pvthfhe-compressor/src/nova/monomial_range.rs:22:30
   |
22 |     value_var: &AllocatedNum<NovaScalar>,
   |                              ^^^^^^^^^^ not found in this scope
   |
help: consider importing this type alias
   |
 1 + use crate::nova::NovaScalar;
   |

error[E0433]: cannot find type `NovaScalar` in this scope
  --> crates/pvthfhe-compressor/src/nova/monomial_range.rs:29:16
   |
29 |             Ok(NovaScalar::from(1u64))
   |                ^^^^^^^^^^ use of undeclared type `NovaScalar`
   |
help: consider importing this type alias
   |
 1 + use crate::nova::NovaScalar;
   |

error[E0433]: cannot find type `NovaScalar` in this scope
  --> crates/pvthfhe-compressor/src/nova/monomial_range.rs:33:20
   |
33 |                 Ok(NovaScalar::from(0u64))
   |                    ^^^^^^^^^^ use of undeclared type `NovaScalar`
   |
help: consider importing this type alias
   |
 1 + use crate::nova::NovaScalar;
   |

error[E0425]: cannot find type `NovaScalar` in this scope
  --> crates/pvthfhe-compressor/src/nova/monomial_range.rs:46:32
   |
46 |     let bits: Vec<AllocatedNum<NovaScalar>> = (0..num_bits)
   |                                ^^^^^^^^^^ not found in this scope
   |
help: consider importing this type alias
   |
 1 + use crate::nova::NovaScalar;
   |

error[E0433]: cannot find type `NovaScalar` in this scope
  --> crates/pvthfhe-compressor/src/nova/monomial_range.rs:48:27
   |
48 |             let bit_val = NovaScalar::from(((value >> idx) & 1) as u64);
   |                           ^^^^^^^^^^ use of undeclared type `NovaScalar`
   |
help: consider importing this type alias
   |
 1 + use crate::nova::NovaScalar;
   |

error[E0433]: cannot find type `NovaScalar` in this scope
  --> crates/pvthfhe-compressor/src/nova/monomial_range.rs:56:23
   |
56 |         let bit_val = NovaScalar::from(((value >> idx) & 1) as u64);
   |                       ^^^^^^^^^^ use of undeclared type `NovaScalar`
   |
help: consider importing this type alias
   |
 1 + use crate::nova::NovaScalar;
   |

error[E0433]: cannot find type `NovaScalar` in this scope
  --> crates/pvthfhe-compressor/src/nova/monomial_range.rs:58:47
   |
58 |         let bit_minus_one_val = if bit_val == NovaScalar::ONE {
   |                                               ^^^^^^^^^^ use of undeclared type `NovaScalar`
   |
help: consider importing this type alias
   |
 1 + use crate::nova::NovaScalar;
   |

error[E0433]: cannot find type `NovaScalar` in this scope
  --> crates/pvthfhe-compressor/src/nova/monomial_range.rs:59:13
   |
59 |             NovaScalar::ZERO
   |             ^^^^^^^^^^ use of undeclared type `NovaScalar`
   |
help: consider importing this type alias
   |
 1 + use crate::nova::NovaScalar;
   |

error[E0433]: cannot find type `NovaScalar` in this scope
  --> crates/pvthfhe-compressor/src/nova/monomial_range.rs:61:14
   |
61 |             -NovaScalar::ONE
   |              ^^^^^^^^^^ use of undeclared type `NovaScalar`
   |
help: consider importing this type alias
   |
 1 + use crate::nova::NovaScalar;
   |

error[E0433]: cannot find type `NovaScalar` in this scope
  --> crates/pvthfhe-compressor/src/nova/monomial_range.rs:81:16
   |
81 |             Ok(NovaScalar::ZERO)
   |                ^^^^^^^^^^ use of undeclared type `NovaScalar`
   |
help: consider importing this type alias
   |
 1 + use crate::nova::NovaScalar;
   |

error[E0433]: cannot find type `NovaScalar` in this scope
  --> crates/pvthfhe-compressor/src/nova/monomial_range.rs:92:12
   |
92 |         Ok(NovaScalar::ZERO)
   |            ^^^^^^^^^^ use of undeclared type `NovaScalar`
   |
help: consider importing this type alias
   |
 1 + use crate::nova::NovaScalar;
   |

error[E0433]: cannot find type `NovaScalar` in this scope
  --> crates/pvthfhe-compressor/src/nova/monomial_range.rs:94:20
   |
94 |     let mut pow2 = NovaScalar::ONE;
   |                    ^^^^^^^^^^ use of undeclared type `NovaScalar`
   |
help: consider importing this type alias
   |
 1 + use crate::nova::NovaScalar;
   |

error[E0433]: cannot find type `NovaScalar` in this scope
   --> crates/pvthfhe-compressor/src/nova/monomial_range.rs:117:28
    |
117 |                         Ok(NovaScalar::ZERO)
    |                            ^^^^^^^^^^ use of undeclared type `NovaScalar`
    |
help: consider importing this type alias
    |
  1 + use crate::nova::NovaScalar;
    |

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.
error: could not compile `pvthfhe-compressor` (lib) due to 14 previous errors
